# PDF_Lks_Text_Editor

./: .gitignore  Cargo.toml  README.md
examples/: apply.rs  fontbench.rs  fontdiag.rs
scripts/: surya_ocr_wrapper.py
src/: app.rs  fontstore.rs  lib.rs  main.rs  worker.rs
src/ocr/: fontmatch.rs  mod.rs  preprocess.rs  surya.rs  tesseract.rs
src/pdf/: document.rs  edit.rs  embed.rs  font.rs  mod.rs  overlay.rs  render.rs  shapes.rs  subset.rs  text.rs  ttf.rs
tests/: app_flow.rs  engine.rs  fonts.rs  scan_font.rs
